Small fixes to the navbar on mobile.

--- a/assets/css/navbar.scss
+++ b/assets/css/navbar.scss
@@ -107,3 +107,53 @@ $navbar-height-large: 60px;
     display: block !important;
   }
 }
+
+.navbar-header button {
+  width: 32px;
+  height: 32px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 6px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid #333;
+  border-radius: 4px;
+  color: #fff;
+}
+
+@media (min-width: 325px) {
+  .navbar-header button {
+    width: 44px;
+    height: 36px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 8px;
+    font-size: 16px;
+  }
+}
+
+.navbar .container {
+  width: 100%;
+}
+
+.nav > li > a {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+@media (min-width: 992px) {
+  .navbar .container {
+    width: 940px;
+  }
+
+  .nav > li > a {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar .container {
+    width: 1140px;
+  }
+}
